# autotrace

./: Makefile.am  autotrace.c  autotrace.dsp  autotrace.spec.in  autotrace.vcproj  configure.ac  intl.h
autotrace/: autotrace.sln
autotrace/autotrace/: ReadMe.txt  autotrace.cpp  autotrace.vcxproj  autotrace.vcxproj.filters  stdafx.cpp
po/: POTFILES.in
src/: atou.cpp  atou.h  autotrace.cpp  autotrace.h  color.cpp  color.h  curve.cpp  curve.h  despeckle.cpp  despeckle.h  epsilon-equal.cpp  epsilon-equal.h  exception.cpp  exception.h  filename.cpp  filename.h  fit.cpp  fit.h  getopt.cpp  image-proc.cpp  image-proc.h  input-bmp.cpp  input-bmp.h  input-gf.cpp  input-gf.h  input-magick.cpp  input-png.c  input-png.cpp  input-png.h  input-pnm.cpp  input-pnm.h  input-tga.cpp  input-tga.h  input.cpp  input.h  main.c  main.cpp  output-cgm.c  output-cgm.cpp  output-cgm.h  (+51 more)
